--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
     <head>
         <title>really cool site</title>
     </head>
-    <body style="text-align: center;font-size: 50px;background-color: beige;">
+    <body style="text-align: center; background-color: blue;">
         <main>
-            <p> welcome to the site, hows it going </p>
-            <p> not much going on around these parts :( </p>
-
-            <img src="https://i.imgur.com/FaKjm9h.png", width = "800", height = "400">
+            <h1 style="background-color: aqua;"> Da Site </h1>
+            <h2 style="background-color: aqua;"> Weekly Work</h2>
+            <p style="font-size: 50px; background-color: blueviolet;"><a href="./week01/week01.html">yikes</a></p>
         </main>
     </body>
 </html>
