Changed format of index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
     <body style="text-align: center; background-color: blue;">
         <main>
-            <h1 style="background-color: aqua;"> Da Site </h1>
-            <h2 style="background-color: aqua;"> Weekly Work</h2>
-            <p style="font-size: 50px; background-color: blueviolet;"><a href="./week01/week01.html">yikes</a></p>
+            <h1 style="background-color: aqua; font-size: 50px"> Da Site </h1>
+            <h2 style="background-color: aqua; font-size: 40px"> Weekly Work</h2>
+            <p style="font-size: 25px; background-color: blueviolet;"><a href="./week01/week01.html">Week 01</a></p>
         </main>
     </body>
 </html>
