Reformatted site; Added week02

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
     <head>
         <title>really cool site</title>
     </head>
-    <body style="text-align: center; background-color: blue;">
+    <body style="text-align: center; background-color: #03071E; color:white;">
         <main>
-            <h1 style="background-color: aqua; font-size: 50px"> Da Site </h1>
-            <h2 style="background-color: aqua; font-size: 40px"> Weekly Work</h2>
-            <p style="font-size: 25px; background-color: blueviolet;"><a href="./week01/week01.html">Week 01</a></p>
+            <div style="font-family:monospace;">
+                <h1 style="font-size: 70px;"> Justin's website </h1>
+                <h2 style="font-size: 50px; font-style: italic"> NYU Web Development</h2>
+            </div>
+            <img src="https://i.imgur.com/yY9Oj5S.gif", width="200px", height="200px">
+            <h3 style="font-size: 42px; background-color:#0F2395;">Weekly Work</h3>
+            <div style="color:black;font-size:30px">
+                <p style="background-color: #6A7FF0"><a href="./week01/week01.html">Week 01</a></p>
+                <p style="background-color: #6A7FF0"><a href="./week02/week02.html">Week 02</a></p>
+            </div>
+            
         </main>
     </body>
 </html>
