--- a/week01/week01.html
+++ b/week01/week01.html
@@ -14,7 +14,7 @@
                 This reading gave me the chance to see what the original intenion of the Web was and how that intention has been altered. It also made me more aware of how
                 some are trying to take advantage of this extremely powerful tool, and now I can recognize these malicious attempts in many aspects of my daily internet/web usage.
             </p>
-            <img src= "https://condaluna.com/assets/stickers/growing-star-wow.gif">
+            <img src= "https://condaluna.com/assets/stickers/growing-star-wow.gif", width="200px", height="200px">
             <p style="font-size: 40px; background-color: rgb(250, 96, 229);">"As We May Think"</p>
             <p style="font-size: 18px;">
                 "As We May Think" provides a very intriguing read about developing technology through the lense of the past. I found it interesting how the author was able to
@@ -25,6 +25,8 @@
                 The idea that data needs to be transmitted and consumed rapidly is something that resonates significantly in todays world, with things like the internet ultimately
                 fulflling the need that the author recognized all that time ago.
             </p>
+
+            <p style="font-size:20px;background-color: rgb(189, 75, 174)"><a href="../index.html">Back to main site</a></p>
         </main>
     </body>
 </html>
