--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <h3 style="font-size: 42px; background-color:#0F2395;">Weekly Work</h3>
             <div style="color:black;font-size:30px">
                 <p style="background-color: #6A7FF0"><a href="./week01/week01.html">Week 01</a></p>
-                <p style="background-color: #6A7FF0"><a href="./week02/week02.html">Week 02</a></p>
+                <p style="background-color: #6A7FF0"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Week 02</a></p>
+                <p style="background-color: #6A7FF0"><a href="./week03/week03.html">Week 03</a></p>
             </div>
         </main>
     </body>
