--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <html>
     <head>
         <title>really cool site</title>
+            <link rel="stylesheet" type="text/css" href="theStyle.css">
     </head>
-    <body style="text-align: center; background-color: #03071E; color:white;">
+    <body>
         <main>
-            <div style="font-family:monospace;">
-                <h1 style="font-size: 70px;"> Justin's website </h1>
-                <h2 style="font-size: 50px; font-style: italic"> NYU Web Development</h2>
+            <div class="leftblock";>
+                <a href="./week01/week01.html"><p>Week 01</p></a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p>Week 02</p></a>
+                <a href="./week03/week03.html"><p>Week 03</p></a>
+                <a><p>Week 04</p></a>
+                <a><p>Week 05</p></a>
             </div>
-            <img src="https://i.imgur.com/yY9Oj5S.gif", width="200px", height="200px">
-            <h3 style="font-size: 42px; background-color:#0F2395;">Weekly Work</h3>
-            <div style="color:black;font-size:30px">
-                <p style="background-color: #6A7FF0"><a href="./week01/week01.html">Week 01</a></p>
-                <p style="background-color: #6A7FF0"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Week 02</a></p>
-                <p style="background-color: #6A7FF0"><a href="./week03/week03.html">Week 03</a></p>
+            <div class="rightblock";>
+                <iframe width="530" height="310" src="https://www.youtube.com/embed/j5a0jTc9S10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div>
+                <h1 class = "centerblock">JUSTIN'S WEBSITE</h1>
+                <h2 class = "centerblock">NYU Web Development</h2>
+            </div>
+            <div>
+                <img class="image", src="https://i.imgur.com/yY9Oj5S.gif">
             </div>
         </main>
     </body>
