changes to index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             </div>
             <div class="rightblock";>
                 <iframe width="530" height="310" src="https://www.youtube.com/embed/j5a0jTc9S10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a><p>^ Testing stuff ^</p></a>
+                <a><p>Idk what to put here</p></a>
+                <a><p>Dog will do for now</p></a>
             </div>
             <div>
                 <h1 class = "centerblock">JUSTIN'S WEBSITE</h1>
