--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <body>
         <main>
             <div class="leftblock";>
-                <a href="./week01/week01.html"><p>Week 01</p></a>
+                <a href="./week01/index.html"><p>Week 01</p></a>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p>Week 02</p></a>
-                <a href="./week03/week03.html"><p>Week 03</p></a>
-                <a><p>Week 04</p></a>
+                <a href="./week03/index.html"><p>Week 03</p></a>
+                <a href="./week04/index.html"><p>Week 04</p></a>
                 <a><p>Week 05</p></a>
             </div>
             <div class="rightblock";>
