--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p>Week 02</p></a>
                 <a href="./week03/index.html"><p>Week 03</p></a>
                 <a href="./week04/index.html"><p>Week 04</p></a>
-                <a><p>Week 05</p></a>
+                <a href="./week05/index.html"><p>Week 05</p></a>
             </div>
             <div class="rightblock";>
                 <iframe width="530" height="310" src="https://www.youtube.com/embed/j5a0jTc9S10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
