changes to home page

--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
     <head>
         <title>really cool site</title>
             <link rel="stylesheet" type="text/css" href="theStyle.css">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <main>
-            <div class="leftblock";>
-                <a href="./week01/index.html"><p>Week 01</p></a>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p>Week 02</p></a>
-                <a href="./week03/index.html"><p>Week 03</p></a>
-                <a href="./week04/index.html"><p>Week 04</p></a>
-                <a href="./week05/index.html"><p>Week 05</p></a>
-            </div>
-            <div class="rightblock";>
-                <iframe width="530" height="310" src="https://www.youtube.com/embed/j5a0jTc9S10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a><p>^ Testing stuff ^</p></a>
-                <a><p>Idk what to put here</p></a>
-                <a><p>Dog will do for now</p></a>
-            </div>
-            <div>
-                <h1 class = "centerblock">JUSTIN'S WEBSITE</h1>
-                <h2 class = "centerblock">NYU Web Development</h2>
-            </div>
-            <div>
-                <img class="image", src="https://i.imgur.com/yY9Oj5S.gif">
+            <div class="container">
+                <div class="leftRight">
+                    <div class="leftItem firstRow", id="clickable"><a href="./week01/index.html">Week 01</a></div>
+                    <div class="leftItem secondRow", id="clickable"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Week 02</a></div>
+                    <div class="leftItem thirdRow", id="clickable"><a href="./week03/index.html">Week 03</a></div>
+                    <div class="leftItem fourthRow", id="clickable"><a href="./week04/index.html">Week 04</a></div>
+                    <div class="leftItem fifthRow", id="clickable"><a href="./week05/index.html">Week 05</a></div>
+                    <div class="leftItem sixthRow", id="clickable"><a href="">Week 06</a></div>
+                </div>
+                <div class="middle">
+                    <div class="header1", id="label">Justin's Website</div>
+                    <div class="header2", id="label">NYU Web Development</div>
+                    <img class="image", src="https://i.imgur.com/yY9Oj5S.gif">
+                </div>
+                <div class="leftRight">
+                    <div class="rightItem firstRow", id="clickable"></div>
+                    <div class="rightItem secondRow", id="clickable"></div>
+                    <div class="rightItem thirdRow", id="clickable"></div>
+                    <div class="rightItem fourthRow", id="clickable"></div>
+                    <div class="rightItem fifthRow", id="clickable"></div>
+                    <div class="rightItem sixthRow", id="clickable"></div>
+                </div>
             </div>
         </main>
     </body>
