--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>really cool site</title>
-            <link rel="stylesheet" type="text/css" href="theStyle.css">
+            <link rel="stylesheet" type="text/css" href="/theStyle.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
