--- a/week05/index.html
+++ b/week05/index.html
@@ -1,12 +1,27 @@
 <html>
     <head>
-        <title></title>
+        <title>The Bar</title>
+
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet" type="text/css">
+
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="homeBody">
         <main>
-            
+            <a class="button" href="bts_page.html">
+                <p>Behind the Scenes</p>
+            </a>
+            <div class="homeContainer">
+                <a class="barContainer" href="character_page.html">
+                    <!-- Info about Angela: https://angelawashko.com/home.html -->
+                    <p class="angela">Angela Washko is a politically-engaged feminist who's artwork focuses on how women are perceived in media.</p>
+                    <img class="angelaImage" src="sources/angela.png">
+                </a>
+            </div>
         </main>
     </body>
 </html>
