--- a/week05/bts_page.html
+++ b/week05/bts_page.html
@@ -14,9 +14,9 @@
         <main>
             <div class="btsContainer">
                 <a href="/index.html" class="button"><p>Take me back</p></a>
-                <img class="wireImage" src="/sources/wire1.jpg">
-                <img class="wireImage" src="/sources/wire2.jpg">
-                <img class="wireImage" src="/sources/wire3.jpg">
+                <img class="wireImage" src="sources/wire1.jpg">
+                <img class="wireImage" src="sources/wire2.jpg">
+                <img class="wireImage" src="sources/wire3.jpg">
             </div>
         </main>
     </body>
