--- a/week05/index.html
+++ b/week05/index.html
@@ -18,7 +18,7 @@
             <div class="homeContainer">
                 <a class="barContainer" href="character_page.html">
                     <!-- Info about Angela: https://angelawashko.com/home.html -->
-                    <p class="angela">Angela Washko is a politically-engaged feminist who's artwork focuses on how women are perceived in media.</p>
+                    <p class="angela">Angela Washko is a politically-engaged feminist whose artwork focuses on how women are perceived in media.</p>
                     <img class="angelaImage" src="sources/angela.png">
                 </a>
             </div>
