--- a/week05/justin_page.html
+++ b/week05/justin_page.html
@@ -14,19 +14,17 @@
         <main>
             <div class="collage">
                 <div class="collageRowReverse">
-                    <div class="collageType3"></div>
-                    <div class="collageType2"></div>
-                    <div class="collageType1"></div>
+                    <img class="collageType3" src="sources/why-did-he-kiss-me.png">
+                    <img class="collageType2" src="sources/books.png">
                 </div>
                 <div class="collageRowReverse">
-                    <div class="collageType2"></div>
-                    <div class="collageType3"></div>
+                    <img class="collageType2" src="sources/please-leave-me-alone.jpg">
+                    <img class="collageType2" src="sources/baldie.jpg">
                 </div>
                 <div class="collageRowReverse">
-                    <div class="collageType1"></div>
-                    <div class="collageType1"></div>
-                    <div class="collageType3"></div>
-                    <div class="collageType1"></div>
+                    <img class="collageType1" src="sources/wtf-man.jpg">
+                    <img class="collageType3" src="sources/i-do-not-want-you.jpg">
+                    <img class="collageType1" src="sources/nasty.jpg">
                 </div>
                 <a class="button" href="kim_page.html">
                     <p>Go to Kimberly's POV</p>
