--- a/week05/kim_page.html
+++ b/week05/kim_page.html
@@ -14,19 +14,19 @@
         <main>
             <div class="collage">
                 <div class="collageRow">
-                    <div class="collageType3"></div>
-                    <div class="collageType2"></div>
-                    <div class="collageType1"></div>
+                    <img class="collageType3" src="sources/cringe.png">
+                    <img class="collageType2" src="sources/crowded.jpg">
+                    <img class="collageType1" src="sources/julien's-girlfriend.png">
                 </div>
                 <div class="collageRow">
-                    <div class="collageType2"></div>
-                    <div class="collageType3"></div>
+                    <img class="collageType2" src="sources/man-baby.png">
+                    <img class="collageType3" src="sources/what-the-heck.png">
                 </div>
                 <div class="collageRow">
-                    <div class="collageType1"></div>
-                    <div class="collageType1"></div>
-                    <div class="collageType3"></div>
-                    <div class="collageType1"></div>
+                    <img class="collageType1" src="sources/why-he-look-like-that.png">
+                    <img class="collageType1" src="sources/wtf.png">
+                    <img class="collageType3" src="sources/choices.png">
+                    <img class="collageType1" src="sources/watch-out.png">
                 </div>
                 <a class="button" href="justin_page.html">
                     <p>Go to Justin's POV</p>
