--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <div class="leftItem thirdRow", id="clickable"><a href="./week03/index.html">Week 03</a></div>
                     <div class="leftItem fourthRow", id="clickable"><a href="./week04/index.html">Week 04</a></div>
                     <div class="leftItem fifthRow", id="clickable"><a href="./week05/index.html">Week 05</a></div>
-                    <div class="leftItem sixthRow", id="clickable"><a href="">Week 06</a></div>
+                    <div class="leftItem sixthRow", id="clickable"><a href="./week06/index.html">Week 06</a></div>
                 </div>
                 <div class="middle">
                     <div class="header1", id="label">Justin's Website</div>
