--- a/week05/bts_page.html
+++ b/week05/bts_page.html
@@ -13,7 +13,7 @@
     <body id="homeBody">
         <main>
             <div class="btsContainer">
-                <a href="/index.html" class="button"><p>Take me back</p></a>
+                <a href="index.html" class="button"><p>Take me back</p></a>
                 <img class="wireImage" src="sources/wire1.jpg">
                 <img class="wireImage" src="sources/wire2.jpg">
                 <img class="wireImage" src="sources/wire3.jpg">
