--- a/week06/index.html
+++ b/week06/index.html
@@ -6,7 +6,7 @@
         <title>MOON GANG</title>
 
         <link rel="icon" href="/moon.svg" type="image/svg+xml">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quantico&family=Syne+Mono&Poppins:wght@100&display=swap" rel="stylesheet">
