--- a/week06/index.html
+++ b/week06/index.html
@@ -5,7 +5,7 @@
 
         <title>MOON GANG</title>
 
-        <link rel="icon" href="/moon.svg" type="image/svg+xml">
+        <link rel="icon" href="moon.svg" type="image/svg+xml">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
