--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="wrapper hori">
                     <a href="./week05/index.html"><p>Week 5</p></a>
                     <a href=""><p>Week 6</p></a>
-                    <a href=""><p>Week 7</p></a>
+                    <a href="./week07/index.html"><p>Week 7</p></a>
                     <a href=""><p>Week 8</p></a>
                 </div>
                 <div class="wrapper hori">
