--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="wrapper hori">
                     <a href=""><p>Week 9</p></a>
-                    <a href=""><p>Week 10</p></a>
+                    <a href="./week10/index.html"><p>Week 10</p></a>
                     <a href=""><p>Week 11</p></a>
                     <a href=""><p>Week 12</p></a>
                 </div>
