--- a/week10/index.html
+++ b/week10/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js" defer>  </script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
