changes to index

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <a href=""><p>Week 8</p></a>
                 </div>
                 <div class="wrapper hori">
-                    <a href=""><p>Week 9</p></a>
+                    <a href="https://kimberlysinchi.github.io/NYU-Web-Dev/Week-9/"><p>Week 9</p></a>
                     <a href="./week10/index.html"><p>Week 10</p></a>
                     <a href=""><p>Week 11</p></a>
-                    <a href=""><p>Week 12</p></a>
+                    <a href="https://kimberlysinchi.github.io/NYU-Web-Dev/Week-12/index.html"><p>Week 12</p></a>
                 </div>
             </div> 
         </div>
