--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                     <a href=""><p>Week 11</p></a>
                     <a href="https://kimberlysinchi.github.io/NYU-Web-Dev/Week-12/index.html"><p>Week 12</p></a>
                 </div>
+                <div class="wrapper hori">
+                    <a href="./week13/index.html"><p>Week 13</p></a>
+                    <a href=""><p>Week 14</p></a>
+                </div>
             </div> 
         </div>
         <div class="wrapper hori blue-back" id="Sites">
