Added next minos & hold

--- a/week14/index.html
+++ b/week14/index.html
@@ -16,11 +16,11 @@
     </head>
     <body>
         <div id="container">
-            <div class="box"></div>
+            <div class="display-box"></div>
             <div id="grid"></div>
             <div id="wrapper">
                 <div class="score-box"></div>
-                <div class="box"></div>
+                <div id="next-container"></div>
             </div>
             
         </div>
