--- a/week14/index.html
+++ b/week14/index.html
@@ -16,7 +16,20 @@
     </head>
     <body>
         <div id="container">
-            <div class="display-box"></div>
+            <div id="wrapper">
+                <div class="display-box"></div>
+                <div id="controls">
+                    <p> ← = Move Left </p>
+                    <p> → = Move Right </p>
+                    <p> ↑ = Rotate CW </p>
+                    <p> Z = Rotate CCW </p>
+                    <p> A = Rotate 180</p>
+                    <p> ↓ = Soft Drop </p>
+                    <p> SPACE = Hard Drop </p>
+                    <p> SHIFT = Hold </p>
+                    <p> R = Reset </p>
+                </div>
+            </div>
             <div id="grid"></div>
             <div id="wrapper">
                 <div class="score-box"></div>
