--- a/week14/tetris.html
+++ b/week14/tetris.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" type="image/x-icon" href="https://i.ebayimg.com/images/g/CzQAAOSwHCBh-3gW/s-l300.png">
+        <script src="tetrisScript.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,11 +29,17 @@
                     <p> SHIFT = Hold </p>
                     <p> R = Reset </p>
                 </div>
+                
             </div>
             <div id="wrapper">
-                <div class="score-box"></div>
-                <div id="next-container"></div>
+                <div id="grid"></div>
+                <a href="index.html"><div id="back">BACK</div></a>
             </div>
-        s</div>
+                <div id="wrapper">
+                    <div class="score-box"></div>
+                    <div id="next-container"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
