--- a/week14/index.html
+++ b/week14/index.html
@@ -13,26 +13,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="home-page">
         <div id="container">
-            <div id="wrapper">
-                <div class="display-box"></div>
-                <div id="controls">
-                    <p> ← = Move Left </p>
-                    <p> → = Move Right </p>
-                    <p> ↑ = Rotate CW </p>
-                    <p> Z = Rotate CCW </p>
-                    <p> A = Rotate 180</p>
-                    <p> ↓ = Soft Drop </p>
-                    <p> SPACE = Hard Drop </p>
-                    <p> SHIFT = Hold </p>
-                    <p> R = Reset </p>
-                </div>
-            </div>
-            <div id="wrapper">
-                <div class="score-box"></div>
-                <div id="next-container"></div>
-            </div>
-        s</div>
+            <a href="tetris.html"><div id="arcade-machine"></div></a>
+            <a href="tetris.html"><div id="arcade-machine"></div></a>
+        </div>
     </body>
 </html>
