--- a/week14/snake.html
+++ b/week14/snake.html
@@ -7,19 +7,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" type="image/x-icon" href="https://i.ebayimg.com/images/g/CzQAAOSwHCBh-3gW/s-l300.png">
-        <script src="script.js" defer></script>
+        <script src="snakeScript.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
-    <body id="home-page">
-        <div id="container">
-            <a href="tetris.html"><div id="arcade-machine"></div></a>
-            <a href="snake.html"><div id="arcade-machine"></div></a>
+    <body>
+        <div id="wrapper">
+            <div id="grid"></div>
+            <a href="index.html"><div id="back">BACK</div></a>
         </div>
-        <div id="circle"></div>
-        <div id="floor"></div>
     </body>
 </html>
