Added snake score + controls

--- a/week14/snake.html
+++ b/week14/snake.html
@@ -15,9 +15,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="wrapper">
-            <div id="grid"></div>
-            <a href="index.html"><div id="back">BACK</div></a>
+        <div id="container">
+            <div id="wrapper">
+                <div id="grid"></div>
+                <div id="container">
+                    <a href="index.html"><div id="back">BACK</div></a>
+                </div>
+            </div>
+            <div id="wrapper">
+                <div class="score-box"></div>
+                <div id="controls">
+                    <p> ← = Move Left </p>
+                    <p> → = Move Right </p>
+                    <p> ↑ = Move Up </p>
+                    <p> ↓ = Move Down </p>
+                    <p> R = Reset </p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
