--- a/week14/snake.html
+++ b/week14/snake.html
@@ -25,10 +25,10 @@
             <div id="wrapper">
                 <div class="score-box"></div>
                 <div id="controls">
-                    <p> ← = Move Left </p>
-                    <p> → = Move Right </p>
-                    <p> ↑ = Move Up </p>
-                    <p> ↓ = Move Down </p>
+                    <p> ← / A = Move Left </p>
+                    <p> → / D = Move Right </p>
+                    <p> ↑ / W = Move Up </p>
+                    <p> ↓ / S = Move Down </p>
                     <p> R = Reset </p>
                 </div>
             </div>
