--- a/week14/index.html
+++ b/week14/index.html
@@ -16,8 +16,8 @@
     </head>
     <body id="home-page">
         <div id="container">
-            <a href="tetris.html"><div id="arcade-machine"></div></a>
-            <a href="snake.html"><div id="arcade-machine"></div></a>
+            <a href="tetris.html"><div id="arcade-machine" class="tetris-machine"></div></a>
+            <a href="snake.html"><div id="arcade-machine" class="snake-machine"></div></a>
         </div>
         <div id="circle"></div>
         <div id="floor"></div>
