--- a/week14/snake.html
+++ b/week14/snake.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="snake-background">
         <div id="container">
             <div id="wrapper">
                 <div id="grid"></div>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div id="wrapper">
-                <div class="score-box"></div>
+                <div id="score-box"></div>
                 <div id="controls">
                     <p> ← / A = Move Left </p>
                     <p> → / D = Move Right </p>
