--- a/week14/tetris.html
+++ b/week14/tetris.html
@@ -36,7 +36,7 @@
                 <a href="index.html"><div id="back">BACK</div></a>
             </div>
                 <div id="wrapper">
-                    <div class="score-box"></div>
+                    <div id="score-box"></div>
                     <div id="next-container"></div>
                 </div>
             </div>
